prometheus/alertmanager/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: production
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.alenyika.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093
  tls:
    - hosts:
        - alertmanager.alenyika.com.ng
      secretName: production-cluster-issuer
